[tool.poetry]
name = "Online-Forever"
version = "1.0.0"
description = "A code that can make your Discord account 24/7!"
authors = ["SealedSaucer"]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.22.2"
Flask = "^2.0.0"
urllib3 = "^1.26.7"
websocket-client = "^1.2.1"
requests = "^2.26.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
